--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiogram==2.22.1
 aiohttp==3.8.1
+aioschedule==0.5.2
 aiosignal==1.2.0
 async-timeout==4.0.2
 attrs==22.1.0
@@ -12,6 +13,5 @@ multidict==6.0.2
 pydantic==1.10.2
 python-dotenv==0.21.0
 pytz==2022.2.1
-schedule==1.1.0
 typing_extensions==4.3.0
 yarl==1.8.1
